{{$NEXT}}
    - fix end_to_end.t due to different return values by Net::AMQP::RabbitMQ
    - require Net::AMQP::RabbitMQ 2.30000
    - add encryption support

0.141470  2014-05-27 08:39:29EDT-0400 America/New_York
    - simplify connection cache key generation
    - remove obscure hash slice syntax since _connect_cached only returns one
      arg anyway
    - fix end_to_end.t test failure with Test::Net::RabbitMQ >= 0.07
    - use Net::AMQP::RabbitMQ instead of the unmaintained Net::RabbitMQ

0.102030  2010-07-22 08:47:59 EDT
    - no real changes to the code, just the build
      e.g. switching to a META.json file from a META.yml file