@@ -2,6 +2,8 @@
     - fix end_to_end.t due to different return values by Net::AMQP::RabbitMQ
     - require Net::AMQP::RabbitMQ 2.30000
     - add encryption support
+    - add reconnect support
+    - remove class-wide connection caching
 
 0.141470  2014-05-27 08:39:29EDT-0400 America/New_York
     - simplify connection cache key generation
